--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,25 @@
+astroid==2.4.2
+certifi==2020.12.5
+chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 flask-marshmallow==0.14.0
 Flask-SQLAlchemy==2.4.4
+idna==2.10
+isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 marshmallow==3.9.1
 marshmallow-sqlalchemy==0.24.1
+mccabe==0.6.1
+pylint==2.6.0
+pylint-flask-sqlalchemy==0.2.0
+requests==2.25.0
 six==1.15.0
 SQLAlchemy==1.3.20
+toml==0.10.2
+urllib3==1.26.2
 Werkzeug==1.0.1
+wrapt==1.12.1
